feat: slayt sunumu artifact eklendi
- Slayt oluşturma: LLM (mistral-nemo) + görsel (imagen) ile chat'te kare önizleme ve sağ panel
- Tek öğe güncelleme: POST /api/document/update-slide-element (title, body, image)
- UI: ui-slide (SlidesPreview, SlidesContentComponent), resizable panel, Undo/Redo
- DB: document.kind'a "slides" eklendi; docs (slide.md, case, requirements) eklendi

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
 AUTH_SECRET=****
 
+# Google OAuth: "Google ile giriş/kayıt" için. Kimlik bilgileri: https://console.cloud.google.com/apis/credentials
+AUTH_GOOGLE_ID=****
+AUTH_GOOGLE_SECRET=****
+
 # The following keys below are automatically created and
 # added to your environment when you deploy on Vercel
 
@@ -15,9 +19,15 @@ AI_GATEWAY_API_KEY=****
 BLOB_READ_WRITE_TOKEN=****
 
 # Instructions to create a PostgreSQL database here: https://vercel.com/docs/postgres
+# Local Docker (docker compose up -d): postgresql://postgres:postgres@localhost:55432/ai_chatbot
 POSTGRES_URL=****
 
 
 # Instructions to create a Redis store here:
 # https://vercel.com/docs/redis
 REDIS_URL=****
+
+
+
+
+
